--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
 Scrapy~=2.12.0
 itemadapter~=0.11.0
 pytest~=8.3.5
+pandas~=2.2.3
+torch~=2.7.0
+nltk~=3.9.1
+numpy~=2.1.3
+transformers~=4.51.3
+gradio~=5.25.2
